--- a/src/resourses/views/home.hbs
+++ b/src/resourses/views/home.hbs
@@ -1,1 +1,22 @@
 <h1>HOME PAGE</h1>
+
+<div class="mt6">
+    <div class="row">
+        {{#each courses}}
+        <div class="col-sm-4 .col-lg-4>">
+            <div class="card" style="width: 18rem;">
+                <a href="/courses/{{this.slug}}">
+                <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+                </a>
+                <div class="card-body">
+                <a href="/courses/{{this.slug}}">
+                    <h5 class="card-title">{{this.name}}</h5>
+                </a>
+                    <p class="card-text">{{this.descriptions}}</p>
+                    <a href="#" class="btn btn-primary">Buy courses</a>
+                </div>
+                </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
