--- a/src/resourses/scss/app.scss
+++ b/src/resourses/scss/app.scss
@@ -9,44 +9,61 @@ css
   Josh's Custom CSS Reset
   https://www.joshwcomeau.com/css/custom-css-reset/
 */
-*, *::before, *::after {
-    box-sizing: border-box;
+// *, *::before, *::after {
+//     box-sizing: border-box;
+// }
+// * {
+//     margin: 0;
+// }
+// html,
+// body {
+//     height: 100%;
+// }
+// body {
+//     line-height: 1.5;
+//     -webkit-font-smoothing: antialiased;
+// }
+// img,
+// picture,
+// video,
+// canvas,
+// svg {
+//     display: block;
+//     max-width: 100%;
+// }
+// input,
+// button,
+// textarea,
+// select {
+//     font: inherit;
+// }
+// p,
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//     overflow-wrap: break-word;
+// }
+// #root,
+// #__next {
+//     isolation: isolate;
+// }
+
+.card-course-item {
+    margin-top: 16px;
 }
-* {
-    margin: 0;
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
 }
-html,
-body {
-    height: 100%;
-}
-body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-}
-img,
-picture,
-video,
-canvas,
-svg {
-    display: block;
-    max-width: 100%;
-}
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    overflow-wrap: break-word;
-}
-#root,
-#__next {
-    isolation: isolate;
+
+.checkbox-select-all-options {
+    width: 160px;
+    margin: 0 16px;
+    display: flex;
 }
