--- a/src/resourses/views/courses/create.hbs
+++ b/src/resourses/views/courses/create.hbs
@@ -1,6 +1,6 @@
 <div class="mt-4">
     <h1>Create New Course</h1>
-    <form method="POST" action="../courses/store" enctype="application/json">
+    <form method="POST" action="/courses/store" enctype="application/json">
         <div class="form-group">
             <label for="name">name</label>
             <input type="text" class="form-control" id="name" name="name">
