--- a/src/resourses/views/home.hbs
+++ b/src/resourses/views/home.hbs
@@ -4,7 +4,7 @@
     <div class="row">
         {{#each courses}}
         <div class="col-sm-4 .col-lg-4>">
-            <div class="card" style="width: 18rem;">
+            <div class="card-course-item" style="width: 18rem;">
                 <a href="/courses/{{this.slug}}">
                 <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
                 </a>
@@ -15,7 +15,7 @@
                     <p class="card-text">{{this.descriptions}}</p>
                     <a href="#" class="btn btn-primary">Buy courses</a>
                 </div>
-                </div>
+            </div>
         </div>
         {{/each}}
     </div>
